--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -16,15 +16,17 @@ sendinvoicetoadherentTitleList=Cotisations non réglés
 sendinvoicetoadherentTitleCreate=Création facture et envoi par email
 sendinvoicetoadherentLeftMenuTitle=Facturer cotisations
 sendinvoicetoadherentLeftMenuTitleList=Liste des adhérents
-sendinvoicetoadherentCount=Nombre de cotisation non réglés
+sendinvoicetoadherentCount=Nombre d'adhérent à facturer
 sendinvoicetoadherentViewLinkID=Liste des adhérents concernés
 sendinvoicetoadherentErrorCreateNotPermitted=Erreur : vous n'avez pas le droit nécéssaire pour poursuivre le cette action
 sendinvoicetoadherentErrorDateFac=Erreur : date facture invalide
 sendinvoicetoadherentErrorDate=Erreur : date adhésion ou fin adhésion invalide
 sendinvoicetoadherentErrorCreateTiers=Erreur : création de tiers pour %s adhérent(s)
 sendinvoicetoadherentErrorCreateFacture=Erreur : création de facture pour %s tiers
+sendinvoicetoadherentErrorMailSend=Erreur : %s mail(s) non envoyé(s)
 sendinvoicetoadherentViewListErrorCreateTiers=Liste des adhérents dont la création d'un tiers a échoué
 sendinvoicetoadherentViewListErrorCreateFacture=Liste des tiers dont la création d'une facture a échoué
+sendinvoicetoadherentViewListErrorMailSend=Liste des tiers dont l'envoi de mail a échoué
 sendinvoicetoadherentConfirmCreate=Création de %s facture(s)
 
 sendinvoicetoadherentRightRead=Consulter la liste
