ADD : suppression de l'envoi de mail + affichage du nom de la société plutôt que de l'ID adhérent

--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -41,7 +41,7 @@ sendinvoicetoadherentAvoirValidate=%s avoir(s) créé(s)
 sendinvoicetoadherentRightRead=Consulter la liste
 sendinvoicetoadherentRightCreate=Créer/envoyer les factures
 
-sendinvoicetoadherentActionCreate=Créer/envoyer factures
+sendinvoicetoadherentActionCreate=Créer les factures
 sendinvoicetoadherentActionCreateAvoir=Créer les avoirs
 sendinvoicetoadherentActionCreateConfirm=Valider
 sendinvoicetoadherentDateFacture=Date facturation
