Modif formulaire de création

--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -15,7 +15,7 @@ sendinvoicetoadherentTitle=Facturer cotisations
 sendinvoicetoadherentTitleAvoir=Générer avoirs
 sendinvoicetoadherentTitleList=Cotisations non réglés
 sendinvoicetoadherentTitleListAvoir=Création d'avoirs pour les factures de cotisation non réglés
-sendinvoicetoadherentTitleCreate=Création facture et envoi par email
+sendinvoicetoadherentTitleCreate=Création des factures d'adhésion
 sendinvoicetoadherentLeftMenuTitle=Facturer cotisations
 sendinvoicetoadherentLeftMenuTitleList=Liste des adhérents
 sendinvoicetoadherentLeftMenuTitleListAvoir=Générer des avoirs
