Modif process de facturation

--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -13,15 +13,15 @@ sendinvoicetoadherent_message=Core du mail
 
 sendinvoicetoadherentTitle=Facturer cotisations
 sendinvoicetoadherentTitleAvoir=Générer avoirs
-sendinvoicetoadherentTitleList=Cotisations non réglés
+sendinvoicetoadherentTitleList=Tiers n'ayant pas de facture d'adhésion sur l'année civile en cours
 sendinvoicetoadherentTitleListAvoir=Création d'avoirs pour les factures de cotisation non réglés
 sendinvoicetoadherentTitleCreate=Création des factures d'adhésion
-sendinvoicetoadherentLeftMenuTitle=Facturer cotisations
-sendinvoicetoadherentLeftMenuTitleList=Liste des adhérents
-sendinvoicetoadherentLeftMenuTitleListAvoir=Générer des avoirs
-sendinvoicetoadherentCount=Nombre d'adhérent à facturer
+sendinvoicetoadherentLeftMenuTitle=Facturation auto adhésions
+sendinvoicetoadherentLeftMenuTitleList=Tiers à facturer
+sendinvoicetoadherentLeftMenuTitleListAvoir=Avoirs à générer
+sendinvoicetoadherentCount=Nombre de tiers à facturer
 sendinvoicetoadherentCountUnpaidInvoice=Nombre de facture impayée
-sendinvoicetoadherentViewLinkID=Liste des adhérents concernés
+sendinvoicetoadherentViewLinkID=Liste des tiers concernés
 sendinvoicetoadherentErrorCreateNotPermitted=Erreur : vous n'avez pas le droit nécéssaire pour poursuivre le cette action
 sendinvoicetoadherentErrorDateFac=Erreur : date facture invalide
 sendinvoicetoadherentErrorDate=Erreur : date adhésion ou fin adhésion invalide
