Nouvelle requête pour liste des avoirs

--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -14,13 +14,13 @@ sendinvoicetoadherent_message=Core du mail
 sendinvoicetoadherentTitle=Facturer cotisations
 sendinvoicetoadherentTitleAvoir=Générer avoirs
 sendinvoicetoadherentTitleList=Tiers n'ayant pas de facture d'adhésion sur l'année civile en cours
-sendinvoicetoadherentTitleListAvoir=Création d'avoirs pour les factures de cotisation non réglés
+sendinvoicetoadherentTitleListAvoir=Factures d'adhésion de l'année civile en cours non réglées
 sendinvoicetoadherentTitleCreate=Création des factures d'adhésion
 sendinvoicetoadherentLeftMenuTitle=Facturation auto adhésions
 sendinvoicetoadherentLeftMenuTitleList=Tiers à facturer
 sendinvoicetoadherentLeftMenuTitleListAvoir=Avoirs à générer
 sendinvoicetoadherentCount=Nombre de tiers à facturer
-sendinvoicetoadherentCountUnpaidInvoice=Nombre de facture impayée
+sendinvoicetoadherentCountUnpaidInvoice=Nombre de factures impayées
 sendinvoicetoadherentViewLinkID=Liste des tiers concernés
 sendinvoicetoadherentErrorCreateNotPermitted=Erreur : vous n'avez pas le droit nécéssaire pour poursuivre le cette action
 sendinvoicetoadherentErrorDateFac=Erreur : date facture invalide
