Filtrage liste à facturer pour ne prendre que les actifs (TK 7188)

--- a/langs/fr_FR/sendinvoicetoadherent.lang
+++ b/langs/fr_FR/sendinvoicetoadherent.lang
@@ -19,7 +19,7 @@ sendinvoicetoadherentTitleCreate=Création des factures d'adhésion
 sendinvoicetoadherentLeftMenuTitle=Facturation auto adhésions
 sendinvoicetoadherentLeftMenuTitleList=Tiers à facturer
 sendinvoicetoadherentLeftMenuTitleListAvoir=Avoirs à générer
-sendinvoicetoadherentCount=Nombre de tiers à facturer
+sendinvoicetoadherentCount=Nombre de tiers en activité à facturer
 sendinvoicetoadherentCountUnpaidInvoice=Nombre de factures impayées
 sendinvoicetoadherentViewLinkID=Liste des tiers concernés
 sendinvoicetoadherentErrorCreateNotPermitted=Erreur : vous n'avez pas le droit nécéssaire pour poursuivre le cette action
